manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsuchen-app-deployment
  labels:
    app: tsuchen
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tsuchen
  template:
    metadata:
      labels:
        app: tsuchen
    spec:
      containers:
      - name: tsuchen
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
