manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsuchen-app-service
  namespace: dev
  labels:
    app: tsuchen
spec:
  type: NodePort
  selector:
    app: tsuchen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
